--- a/style.css
+++ b/style.css
@@ -4,16 +4,19 @@ html {
 }
 
 .container {
-    display: flexbox;
-}
+    display: flex;
+    align-items: flex-end;
+    gap: 15px;
+    border: 4px solid white;
 
+}
 .first {
   font-size: 48px;
   font-weight: bolder;
   color: #f9faf8;
 }
 
-.second a:link {
+.second {
   font-size: 18px;
   color: #e5e7eb;
 }
@@ -40,5 +43,13 @@ button {
 }
 
 ul {
-    list-style: none;
+  display: flex;
+  list-style: none;
+  padding: auto;
+}
+
+a {
+  font-size: 18px;
+  color: #e5e7eb;
+  text-decoration: none;
 }
