--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 html {
   background-color: #1f2937;
   font-family: "Roboto", sans-serif;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 
-.container {
-    display: flex;
-    align-items: flex-end;
-    gap: 15px;
-    border: 4px solid white;
-
+.site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
+
 .first {
   font-size: 48px;
   font-weight: bolder;
@@ -27,6 +28,13 @@ html {
 }
 button {
   background-color: #3882f6;
+  border: none;
+  color: white;
+  padding: 10px;
+  text-align: center;
+  display: inline-block;
+  border-radius: 8px;
+
 }
 
 .info {
@@ -45,7 +53,11 @@ button {
 ul {
   display: flex;
   list-style: none;
-  padding: auto;
+  
+}
+
+.menu__item {
+  margin: 10px;
 }
 
 a {
@@ -53,3 +65,4 @@ a {
   color: #e5e7eb;
   text-decoration: none;
 }
+
